Small config changes

--- a/config.conf
+++ b/config.conf
@@ -1,3 +1,6 @@
-[crawl]
+[nexus_crawl]
 base_url: https://sbforge.org/nexus/content/repositories/releases
 output_dir: releases
+
+[dir_traversal]
+base_dir: releases
