Prettified some stuff, added requirements.txt and added config back

--- a/config.conf
+++ b/config.conf
@@ -1,6 +1,7 @@
 [nexus_crawl]
-base_url: https://sbforge.org/nexus/content/repositories/releases
+releases_base_url: https://sbforge.org/nexus/content/repositories/releases
 output_dir: releases
 
 [dir_traversal]
 base_dir: releases
+output_dir: new_releases
