Documented all the methods of the run.py file.

--- a/config.conf
+++ b/config.conf
@@ -5,3 +5,7 @@ output_dir: releases
 [dir_traversal]
 base_dir: releases
 output_dir: new_releases
+
+[worker]
+namespace_url: http://maven.apache.org/POM/4.0.0
+find_children_runs: 3
