Updated how logging works, and is now loading through configs.

--- a/config.conf
+++ b/config.conf
@@ -1,3 +1,7 @@
+[all]
+namespace_url: http://maven.apache.org/POM/4.0.0
+logging_level: INFO
+
 [nexus_crawl]
 releases_base_url: https://sbforge.org/nexus/content/repositories/releases
 output_dir: releases
@@ -7,5 +11,4 @@ base_dir: releases
 output_dir: new_releases
 
 [worker]
-namespace_url: http://maven.apache.org/POM/4.0.0
 find_children_runs: 3
