Created a new way to map dependencies. Still not working 100%.

--- a/.gitignore
+++ b/.gitignore
@@ -128,9 +128,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Files created during project run
 .idea
 releases/*
 new_releases/*
 tgfs/*
 structure.json
 structure.csv
+dependency_map.json
